--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
    
    
     <title>My Portfolio</title>
+    <link rel="icon" href="images.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
